# miniproject3-group5

./: .gitignore  main.ipynb  pyproject.toml
lda_scores/: grid_search.json  n_topics=10_a=0.01_b=0.01.json  n_topics=10_a=0.01_b=0.3.json  n_topics=10_a=0.01_b=1.json  n_topics=10_a=0.3_b=0.01.json  n_topics=10_a=0.3_b=0.3.json  n_topics=10_a=0.3_b=1.json  n_topics=10_a=1_b=0.01.json  n_topics=10_a=1_b=0.3.json  n_topics=10_a=1_b=1.json  n_topics=2_a=0.01_b=0.01.json  n_topics=2_a=0.01_b=0.3.json  n_topics=2_a=0.01_b=1.json  n_topics=2_a=0.3_b=0.01.json  n_topics=2_a=0.3_b=0.3.json  n_topics=2_a=0.3_b=1.json  n_topics=2_a=1_b=0.01.json  n_topics=2_a=1_b=0.3.json  n_topics=2_a=1_b=1.json  n_topics=3_a=0.01_b=0.01.json  n_topics=3_a=0.01_b=0.3.json  n_topics=3_a=0.01_b=1.json  n_topics=3_a=0.3_b=0.01.json  n_topics=3_a=0.3_b=0.3.json  n_topics=3_a=0.3_b=1.json  n_topics=3_a=1_b=0.01.json  n_topics=3_a=1_b=0.3.json  n_topics=3_a=1_b=1.json  n_topics=4_a=0.01_b=0.01.json  n_topics=4_a=0.01_b=0.3.json  n_topics=4_a=0.01_b=1.json  n_topics=4_a=0.3_b=0.01.json  n_topics=4_a=0.3_b=0.3.json  n_topics=4_a=0.3_b=1.json  n_topics=4_a=1_b=0.01.json  n_topics=4_a=1_b=0.3.json  n_topics=4_a=1_b=1.json  n_topics=5_a=0.01_b=0.01.json  n_topics=5_a=0.01_b=0.3.json  n_topics=5_a=0.01_b=1.json  (+42 more)
