[tool.poetry]
name = "miniproject3-group5"
version = "0.1.0"
description = ""
authors = ["Elliot Farmer Garcia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pyldavis = "^3.4.1"
seaborn = "^0.12.2"
gensim = "^4.3.1"
nltk = "^3.8.1"
numpyencoder = "^0.3.0"
wordcloud = "^1.9.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
